Added exceptions and parsing tests for most actions (#25)
* Added exceptions 

* Added parsing tests for most actions

---------

Co-authored-by: Pawel Gorgolewski <pgorgolewski01@gmail.com>